--- a/src/main/resources/resources/lang/en_US.yml
+++ b/src/main/resources/resources/lang/en_US.yml
@@ -51,7 +51,7 @@ help:
   - '&9/%cmd reload &3- &2Reload config'
   - '&9/%cmd addons &3- &2Show loaded addons'
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aAddon&7) &3- &2Manage addons'
-  - '&9/%cmd registry &7(&aanimations&7|&aactions&7|&amaterials&7) &3- &2Show list of registered registry items'
+  - '&9/%cmd registry &7(&aanimations&7|&aactions&7|&amaterials&7|&aguitypeditems&7) &3- &2Show list of registered registry items'
 
 help-addons:
   format:
