--- a/src/main/resources/resources/lang/ua_UA.yml
+++ b/src/main/resources/resources/lang/ua_UA.yml
@@ -51,7 +51,7 @@ help:
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
   - '&9/%cmd addons &3- &2Показати завантажені аддони'
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aАддон&7) &3- &2Управління аддонами'
-  - "&9/%cmd registry &7(&aanimations&7|&aactions&7|&amaterials&7) &3- &2Показати список зареєстрованих об'єктів реєстру"
+  - "&9/%cmd registry &7(&aanimations&7|&aactions&7|&amaterials&7|&aguitypeditems&7) &3- &2Показати список зареєстрованих об'єктів реєстру"
 
 
 help-addons:
