--- a/common/src/main/resources/lang/ua_UA.yml
+++ b/common/src/main/resources/lang/ua_UA.yml
@@ -1,4 +1,6 @@
-config: '2.6' #DON'T CHANGE THIS PLEASE
+config: # Please do not touch this section
+  version: 27
+  type: lang
 
 # Локальні плейсхолдери
 # %case% - назва кейсу
