--- a/common/src/main/resources/lang/ru_RU.yml
+++ b/common/src/main/resources/lang/ru_RU.yml
@@ -24,7 +24,7 @@ keys-given: '&eИгроку &6%player% &eвыдано &c%key% &eключей'
 keys-given-target: '&eВам было выдано &c%key% &eключей от кейса &6%casetitle%'
 keys-sets: '&eИгроку &6%player% &eустановлено &c%key &eключей'
 keys-sets-target: '&eВам было установлено &c%key% &eключей от кейса &6%casetitle%'
-keys-cleared: '&eИгроку &6%player% &eудалено &c%key% &eключей от кейса %case%'
+keys-cleared: '&eИгроку &6%player% &eудалено &c%key% &eключей от кейса %casetype%'
 all-keys-cleared: '&eВсе ключи игроков были удалены'
 case-destroy-disallow: '&cДонат Кейс ломать запрещено'
 no-keys: '&cУ вас нет ключей для этого кейса. Можете купить их тут >>> &6www.jodexindustries.xyz'
