--- a/common/src/main/resources/lang/ru_RU.yml
+++ b/common/src/main/resources/lang/ru_RU.yml
@@ -44,7 +44,7 @@ help:
   - '&9/%cmd% givekey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Выдать ключи игроку'
   - '&9/%cmd% setkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Установить ключи игроку'
   - '&9/%cmd% delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7[&aКлючи&7] &3- &2Удалить ключи игроку'
-  - '&9/%cmd% delkey all &3- &2Удалить все ключи всем игрокам'
+  - '&9/%cmd% delkey all &7[&aТип Кейса&7] &3- &2Удалить все ключи всем игрокам'
   - '&9/%cmd% reload &3- &2Перезагрузить конфиг'
   - '&9/%cmd% reload cache &3- &2Перезагрузить кэш'
   - '&9/%cmd% addons &3- &2Показать загруженые аддоны'
