--- a/common/src/main/resources/lang/ua_UA.yml
+++ b/common/src/main/resources/lang/ua_UA.yml
@@ -44,7 +44,7 @@ help:
   - '&9/%cmd% givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Видати ключі гравцю'
   - '&9/%cmd% setkey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Встановити ключі гравцю'
   - '&9/%cmd% delkey &7(&aГравець&7) &7(&aТип кейсу&7) &7[&aКлючі&7] &3- &2Видалити ключі гравцю'
-  - '&9/%cmd% delkey all &3- &2Видалити всі ключі всім гравцям'
+  - '&9/%cmd% delkey all &7[&aТип кейсу&7] &3- &2Видалити всі ключі всім гравцям'
   - '&9/%cmd% reload &3- &2Перезавантажити конфіг'
   - '&9/%cmd% reload cache &3- &2Перезавантажити кеш'
   - '&9/%cmd% addons &3- &2Показати завантажені аддони'
